# hymn

./: CHANGELOG.md  README.md  hymn.cabal  stack.yaml
app/Hymn/: CLI.hs  Main.hs
hymn-core/: hymn-core.cabal
hymn-core/src/Hymn/: Theory.hs  Types.hs
hymn-xml/: hymn-xml.cabal
hymn-xml/src/Hymn/: Render.hs
test/: Golden.hs  Integration.hs  Properties.hs  Spec.hs
test/golden/: c-major.xml  d-major.xml  f-major.xml
